# PardisoEigenSolver

./: AutoTools3DEigen.cmake  CMakeLists.txt  README.md  build.bat  compile.bat  env.bat  main.cpp  pardiso_eigen_sym.cpp  pardiso_sym.c  pardiso_sym_0_based.c  readme.txt  run.bat
